styles.css
/*! minireset.css v0.0.6 | MIT License | github.com/jgthms/minireset.css */html,body,p,ol,ul,li,dl,dt,dd,blockquote,figure,fieldset,legend,textarea,pre,iframe,hr,h1,h2,h3,h4,h5,h6{margin:0;padding:0}h1,h2,h3,h4,h5,h6{font-size:100%;font-weight:normal}ul{list-style:none}button,input,select,textarea{margin:0}html{box-sizing:border-box}*,*::before,*::after{box-sizing:inherit}img,video{height:auto;max-width:100%}iframe{border:0}table{border-collapse:collapse;border-spacing:0}td,th{padding:0}td:not([align]),th:not([align]){text-align:left}

/* Variables */

:root {
  --color-grey: #222222;
  --color-white: #ffffff;
  --color-purple: #9662fd;
  --spacing-short: 3vw;
  --spacing-medium: 6vw;
  --spacing-wide: 12vw;
}

/* Layout settings */

body {
  font-family: "Cabin", sans-serif;
  font-size: 26px;
  font-weight: 400;
  line-height: 138%;
  background: var(--color-grey);
  color: var(--color-white);
  padding: 12vw 0;
}

section {
  display: grid;
  grid-gap: var(--spacing-medium);
  grid-template-columns: 1fr;
  padding-bottom: var(--spacing-medium);
  margin-left: var(--spacing-wide);
  margin-right: var(--spacing-wide);
  margin-bottom: var(--spacing-medium);
}

  @media (min-width: 960px) {
    section.halves {
      grid-template-columns: 1fr 1fr;
    }
  }

  @media (min-width: 960px) {
    section.thirds {
      grid-template-columns: 1fr 1fr 1fr;
    }
  }

section.short {
  padding-bottom: 0;
}

.list {
  padding-top: 1em;
  border-top: 2px solid var(--color-white);
}

.list strong {
  display: block;
}

.list strong + * {
  margin-top: var(--spacing-short);
}

/* Basics */

a:hover,
a:active {
  color: var(--color-purple);
}

a:link,
a:visited {
  color: var(--color-purple);
}

a[target="_blank"]:after {
  content: " ⇱";
  font-size: .6em;
  transform: rotate(90deg) translateX(-4px);
  display: inline-block;
  margin-left: .3em;
}

h1, .headline > * {
  font-size: 6vmax;
  font-weight: 700;
  line-height: normal;
}

/* 
  @media (min-width: 960px) {
    .headline > * {
      font-size: 6vw;
    }
  }
*/

h2 {
  font-size: 4vmax;
  line-height: normal;
}

  @media (min-width: 960px) {
    h2 {
      font-size: 2.8vmax;
    }
  }

strong {
  font-weight: 700;
}

section.main {
  border-bottom: 2px solid var(--color-white);
}

.experience li,
.profile li {
  margin-bottom: 1em;
}

.job .what {
  font-weight: 700;
}

.picture {
  margin-bottom: var(--spacing-medium);
}

.split ul {
  display: grid;
  grid-gap: var(--spacing-medium);
  grid-template-columns: 1fr;
}

  @media (min-width: 960px) {
    .split ul {
      grid-template-columns: 1fr 1fr;
    }
  }

.split a,
.work a,
.soon div {
  display: block;
  font-size: 6.25vw;
  line-height: normal;
  margin-bottom: .3em;
  text-decoration: none;
}

  @media (min-width: 960px) {
    .split a,
    .work a,
    .soon div {
      font-size: 2.5rem;
    }
  }

.split span {
  display: block;
}

.split li {
  margin-bottom: 1em;
}

.work li {
  background: var(--color-purple);
  color: var(--color-white);
  padding: var(--spacing-short);
  margin-bottom: var(--spacing-short);
}

.work .soon {
  opacity: .4;
}

.work .soon:hover,
.work .soon:active {
  cursor: not-allowed;
}

.work a {
  color: var(--color-white);
}

.work em {
  opacity: .5;
  display: inline-block;
  font-style: normal;
  font-size: .6em;
  color: var(--color-purple);
  background: var(--color-white);
  border-radius: .2em;
  padding: .2em .4em;
}

.writing a {
  text-decoration: none;
}

.writing img {
  display: inline-block;
  width: .8em;
  margin-right: .3em;
}

